========================================

- Fixed bug in password recovery with logbooks containing blanks
- Fixed bug with logbooks containing blanks in registration notification
- Added icon for protected logbooks
- Increased number of attachments to 50
- Implemented 3D cell frames
- Added anchor for attachments
- Replace CRLF.CRLF by CRLF..CRLF in email notifications

Version 2.3.6, released April 23rd, 2003
========================================

- Eliminated WEB_BUFFER_SIZE, made memory allocation dynamically
- Fixed bug that attachments were deleted on reply
- Added flag "Hidden = 0|1"
- Added warning if maximum number of attachments reached
- Fixed bug: Upon login on a logbook with guest access, one got
  back to the "not logged in" page if username or password was wrong

Version 2.3.5, released April 9th, 2003
=======================================

- Added option "Summary page title"
- Translate "Date" correctly
- Changed "#" to "ID"
- Added "Remember me" button
- Added password recovery facility
- Made "Self register = 3" work with languages other than English

Version 2.3.4, released April 2nd, 2003
=======================================

- Added option "Quote on reply"
- Added option "Admin textarea"
- Fixed problem that replies with attachment upload erased original
  messages
- Fixed enless loop if user gets renamed in password file but browser
  keeps old cookie
- Only ownwer can delete entry if 'restrict edit = 1'
- Fixed error that logbook URL was wrong if messages are submitted via elog
- Added "Icon comment" option
- Added text search in all attributes
- Removed borders around icons in threaded display
- Added option 'Login user'
- Added notification about invalid user

Version 2.3.3, released March 14th, 2003
========================================

- Fixed bug which prevented elogd to bind to port 80 under Linux
- Resubmission of entries does not resubmit replies to those entries

Version 2.3.2, released March 12th, 2003